bulut_bilisim_odevi/Mücahit/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-docker-ingress
spec:
  rules:
  - host: my-docker-app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-docker-service
            port:
              number: 3000
